<resources>
    <string name="app_name">GergarVersant</string>

    <!--   welcome - activity main   -->
    <string name="welcomeFirstActivity">Welcome to Gergar Versant</string>
    <!--  developers  -->
    <string name="authors">By: Eng Carlos Ulloa\n Jonathan Garcia</string>
    <!--  button title  -->
    <string name="btnTitle">Get started</string>


    <!--  Areas of Improvement  -->
    <string name="areasOfImprovement">Areas of Improvement</string>

    <!--  title and description auditive comprehension  -->
    <string name="auditiveTitle">Auditive Comprehension</string>
    <string name="oralTitle">Oral Expression</string>
    <string name="auditiveDescription">• 5min - Listening</string>

    <!--  american accent container  -->
    <string name="americanTitle">American Accent</string>
    <string name="americanDescription">• More Videos</string>
    <string name="americanBtn">Get in</string>

    <!--  my task  -->
    <string name="myTask">My Tasks</string>
    <!--  grammar title  -->
    <string name="grammarTitle">Grammar</string>
    <!--  grammar description  -->
    <string name="grammarDescription">Important</string>

    <!--  articles title  -->
    <string name="articlesTitle">Articles</string>
    <!--  articles description  -->
    <string name="articlesDescription">Important</string>

    <!--  prepositions title  -->
    <string name="prepositionsTitle">Prepositions</string>
    <!--  prepositions description  -->
    <string name="prepositionsDescription">Important</string>

    <!--  btn menu  -->
    <string name="btnSearch"> </string>
    <string name="btnHome"> </string>
    <string name="btnBack"> </string>

    <!--  score container  -->
    <string name="scoreContainer">%d</string>

    <!--  score container  -->
    <string name="scoreCorrect">00</string>
    <!--  score container  -->
    <string name="scoreIncorrect">00</string>
    <!--  first question -->
    <string name="titleQuestion">How many students in your class\n __ for korea?</string>

    <!--  button answer -->
    <string name="buttonAnswerCome">come</string>
    <string name="buttonAnswerComes">comes</string>
    <string name="buttonAnswerAreComing">are coming</string>
    <string name="buttonAnswerCame">came</string>

    <!--  auditive comprehension title  -->
    <string name="auditiveComprehensionTitle">Auditive Comprehension</string>
    <!--  close X  -->
    <string name="close">Close</string>
    <!--  audio playback   -->
    <string name="audioPlayBack">Audio Playback</string>
    <!--  play   -->
    <string name="playBtn">Play Audio</string>
    <!--  restart   -->
    <string name="restartText">Restart</string>
    <!--  continue  -->
    <string name="continueText">Continue</string>
    <!--  restart all btn  -->
    <string name="restartAllBtn">Restart All</string>
    <!--  histories  -->
    <string name="initial_message">First History: Sushil is a marketing manager, he mailed to the employees about the office culture. The employee who go last in office should switch off the fan and light, also check anybody other in the office, if somebody is there inform same to them.</string>
    <string name="second_message">Second History: The train pulled away just after Todd stepped onto it. He was traveling to Chicago for a business meeting. The meeting was on Thursday and he wanted to explore the city for a few days before th meeting. He pulled out his travel map and started to make plans.</string>
    <string name="third_message">Thirst History: Lexie jumped into the wave and was immediately immersed in the water. She stood up and came out of the water. "I love the water, I love the waves and I love the sand," she said, her family was visiting the beach for 1 whole week and this was their first day.</string>

</resources>