<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- gengar logo img -->
    <ImageView
        android:id="@+id/gengarImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:contentDescription="TODO"
        android:src="@drawable/gengar_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- welcome -->
    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/welcomeFirstActivity"
        android:textColor="@color/welcomeTitle"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gengarImg" />

    <!--  developers  -->
    <TextView
        android:id="@+id/developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/reem"
        android:gravity="center"
        android:text="@string/authors"
        android:textColor="@color/developers"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <!--  button  -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnWelcome"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/welcome_btn"
        android:fontFamily="@font/readex"
        android:paddingStart="8dp"
        android:paddingTop="10dp"
        android:paddingEnd="8dp"
        android:paddingBottom="10dp"
        android:text="@string/btnTitle"
        android:textAllCaps="false"
        android:textColor="@color/getStartedTitleBtn"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/developers" />
</androidx.constraintlayout.widget.ConstraintLayout>
